# webserver

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
script/: cross_compile.sh  pack.sh  readme.txt  target_list.txt
src/: args.rs  config.rs  css.rs  defaults.rs  first_run.rs  html.rs  http.rs  io_ops.rs  main.rs  markdown.rs  metadata.rs  printing.rs  requests_handler.rs  router.rs
www/: meta.json
www/style/: default.scss  markdown.scss
