[package]
name = "webserver"
version = "1.0.0"
authors = ["EdoardoLaGreca <lagrecaedoardo@gmail.com>"]
description = "A simple webserver"
edition = "2018"
license = "BSD 3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.1"
regex = "1.4.2"
lazy_static = "1.4.0"
once_cell = "1.5.2"
mime_guess = "2.0.3"
chrono = "0.4.19"
comrak = "0.9.0" # MD -> HTML
toml = "0.5.8"
serde = "1.0.123"
serde_derive = "1.0.123"
colored = "2.0.0"
grass = "0.10.3"
clap = "2.33.3"
threadpool = "1.8.1"
ctrlc = "3.1.7"